--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@
 venv
 __pycache__/
 docs/output/*.pdf
-.chroma_nq/
+**/.chroma_nq/
 .ipynb_checkpoints/
-benchmark_results.json
+**/benchmark_results.json
