--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 .env
 venv
 __pycache__/
-docs/output/*.pdf
+docs/output/
+_minted-*/
 **/.chroma_nq/
 .ipynb_checkpoints/
 1_rag/1.4_large_corpus_rag.py
